simple-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple
  name: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple
  strategy: {}
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
      - image: mclovin612615/simple:1.0
        name: simple
        ports:
        - containerPort: 3000
