svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple
  name: simple
spec:
  ports:
  - protocol: TCP
    port: 3000
    name: web
  selector:
    app: simple
  type: ClusterIP
