ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kxc.rocketbr.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple
            port:
              number: 3000
